@startuml
class ApiRequest
{
    + commandId: string
    + jsonPayload: string
    + ApiRequest()
}

class ApiResponse
{
    + statusCode: ResponseCode
    + jsonPayload: string
    + ApiResponse()
}
ApiResponse *--> ResponseCode

class Firmware
{
    - m_header: FirmwareHeader
    - m_firmware: Uint8Array
    + getHeader(): FirmwareHeader
    + setHeader(header: FirmwareHeader): void
    + setFirwmare(firmware: Uint8Array): void
    + serialize(): Uint8Array
    + deserialize(serialBuffer: Uint8Array): boolean
}
Firmware *--> FirmwareHeader

class FirmwareHeader
{
    + {static} ID_SIZE_BYTE: number = 16 {readonly}
    + {static} TARGET_SIZE_BYTE: number = 16 {readonly}
    + {static} VERSION_SIZE_BYTE: number = 1 {readonly}
    + {static} HASH_ALG_SIZE_BYTE: number = 16 {readonly}
    + {static} SIGN_ALG_SIZE_BYTE: number = 32 {readonly}
    + {static} SIGNATURE_SIZE_BYTE: number = 256 {readonly}
    + {static} HEADER_SIZE_BYTE: number = 337 {readonly}
    - {static} stringToBinary(msg: string): Uint8Array
    - {static} binaryToString(binary: Uint8Array): string
    + FirmwareHeader()
    + getTarget(): string
    + setTarget(target: string): boolean
    + setSignature(signature: Uint8Array): boolean
    + getID(): string
    + setID(id: string): boolean
    + getVersion(): number
    + setVersion(verion: number): void
    + getHashAlg(): string
    + setHashAlg(hashAlg: string): boolean
    + getSignAlg(): string
    + setSignAlg(signAlg: string): boolean
    + getFirmware(): Uint8Array
    + setFirmware(firmware: Uint8Array): void
    + deserialize(serial: Uint8Array): boolean
    + serialize(): Uint8Array
    + deserialize(serialBuffer: Uint8Array): boolean
}

class FirmwareInfo
{
    - targetSystem: string
    - sizeBytes: number
    - payloadHash: string
    - isValid: boolean
    + FirmwareInfo()
}

class NetworkCredentials
{
    - ssid: string
    - passphrase: string
    + NetworkCredentials()
}

enum ResponseCode
{
    SUCCESS = 200
    BAD_REQUEST = 400
    UNAUTHORIZED = 401
    FORBIDDEN = 403
    NOT_FOUND = 404
    METHOD_NOT_ALLOWED = 405
    ERROR = 500
    NOT_IMPLEMENTED = 501
}

class UserCredentials
{
    - username: String
    - password: String
    + UserCredentials()
}
@enduml
